test/files/pos/t4695a/A_2.scala
package foo

class Bar { }
package object Bar { }
