test/files/neg/macro-deprecate-dont-touch-backquotedidents/Macros_Class_5.scala
object Test5 {
  class `macro`
}
